--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
-    "homepage": "https://indrajit002.github.io/typing-speed-cheaker",
-
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+
+    "homepage": "https://indrajit002.github.io/typing-speed-cheaker",
+
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-scripts": "5.0.1",
@@ -38,5 +39,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^6.1.1"
   }
 }
